# try-wasmedge

./: .rustfmt.toml  Cargo.toml  Dockerfile  README.md  build.sh  quickjs.Dockerfile  run.sh  slim.Dockerfile
.devcontainer/: devcontainer.json
src/: main.js  main.rs
src/examples/: bak.rs  proxy.rs  wasmedge_http.rs  wasmedge_http_server.rs
