[package]
name = "try-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper_wasi = { version = "0.15.0", features = ["full"] }
tokio_wasi = { version = "1.23.0", features = ["full"] }
# wasmedge_http_req = "0.9.0" => https://github.com/second-state/http_req/pull/4
http_req_wasi = "0.10.2"
wasmedge_wasi_socket = "0.4.2"

#hyper-tls = "0.5.0"
#bytecodec = "0.4.15"
#httpcodec = "0.2.3"
